<resources>
    <string name="app_name">Discover-to-Do</string>
    <string name="loading">少々お待ちください。</string>
    <string name="btn_splash">さあ始めましょう</string>
    <string name="menu_dailyboosters">デイリー・ブースター</string>
    <string name="menu_ebook">エッセンシャル E-Book</string>
    <string name="menu_nothing"> </string>
    <string name="menu_mind_card">マインドカード</string>
    <string name="menu_purpose_mean">「目的と意義」ファインダー  </string>
    <string name="menu_content_video">映像コンテンツ</string>
    <string name="menu_honeweek">「自分を磨く」ツール</string>
    <string name="menu_settings">設定</string>
    <string name="menu_policy">利用規約</string>
    <string name="menu_termsuse">プライバシーポリシー</string>
    <string name="menu_ebook_pdf">Pdf Ebook</string>
    <string name="title_dailyboosters_all">デイリー・ブースター 過去の配信</string>
    <string name="title_btn_finish">完了</string>
    <string name="setting_notification_title">ブースターの通知</string>
    <string name="setting_notification_freq">頻度 </string>
    <string name="setting_notification_freq_off">オフ </string>
    <string name="setting_notification_freq_daily">毎日 </string>
    <string name="setting_notification_freq_weekly">週１回 </string>
    <string name="setting_notification_time">時刻</string>
    <string name="setting_honeweek_title">「自分を磨く」ツールを開始する曜日</string>
    <string name="setting_honeweek_day_2">月曜日</string>
    <string name="setting_honeweek_day_3">火曜日</string>
    <string name="setting_honeweek_day_4">水曜日</string>
    <string name="setting_honeweek_day_5">木曜日</string>
    <string name="setting_honeweek_day_6">金曜日</string>
    <string name="setting_honeweek_day_7">土曜日</string>
    <string name="setting_honeweek_day_8">日曜日</string>
    <string name="setting_session_title">セッションID</string>
    <string name="setting_time_notify_title">通知の時刻</string>
    <string name="setting_freq_notify_title"> 通知の頻度</string>
    <string name="setting_honeweek_day_title">開始の曜日</string>
    <string name="setting_session_error_input">セッションIDが間違っています。</string>
    <string name="setting_session_help_input">ディスカバリーのトレーニングプログラムに参加した場合は、ここにセッションIDを入力してください。</string>
    <string name="policy_text_0">この規約（以下「本規約」といいます）は、フランクリン・コヴィー・ジャパン株式会社（以下「当社」といいます）が提供をするDiscover-to-Doアプリ（以下「本アプリ」といいます）の利用に関する条件を、本サービスのアプリ利用者（以下「アプリ利用者」といいます）と当社との間で定めるものです。\nアプリ利用者は、この規約（以下「本規約」という）に定める事項をご承諾の上ご利用ください。\nまた、本アプリの利用に関する条件は予告なく変更することがあります。常に最新の内容をご確認いただきますようお願いいたします。\n</string>
    <string name="policy_text_1">1. 本アプリ掲載の情報について</string>
    <string name="policy_text_1_content">当社は、本アプリに掲載する情報（内容やサービスを含む）の信頼性、正確性、完全性、最新性、有用性、適合性等その他一切の事項について、いかなる保証をするものではありません。また、当社は、当社が必要と判断場合、あらかじめアプリ利用者に通知することなく、いつでも、本アプリで公開されている情報の全部または一部の内容を追加、変更、修正、削除、中断し、また、その提供を中止することができるものとします。\n</string>
    <string name="policy_text_2">2. サービス内容と提供</string>
    <string name="policy_text_2_content">2.1 当社はアプリ利用者に対し、本アプリに搭載されている機能やウェブサイトおよびプッシュ通知機能を利用して以下の情報等を提供します。\n・書籍からの出典、能力開発やそれに付随する各種情報\n・当社に関わる各種情報\n・広告、アンケート\n2.2 当社は、別途特別の規定を設けない限り、本アプリをアプリ利用者に無料で提供するものとします。ただし、本アプリを利用するために必要な端末および備品などはアプリ利用者自らが調達し、本アプリやウェブ閲覧やプッシュ通知等に必要な通信料金はアプリ利用者が負担するものとします。\n2.3 当社は、本アプリの全部または一部を、本人確認の有無、登録情報の有無、その他、当社が必要と判断する条件を満たしたアプリ利用者に限定して提供することができるものとします。\n</string>
    <string name="policy_text_3">3. 著作権等</string>
    <string name="policy_text_3_content">本アプリに掲載されている情報、デザイン、レイアウト、ロゴマーク、商標等に関しては、当社または当社にその利用を認めた権利者が著作権等の知的財産権、使用権その他の権利を有しています。権利者の許可なく複製、転用されることのないようお願いいたします。\n</string>
    <string name="policy_text_4">4. 本アプリからのリンクについて</string>
    <string name="policy_text_4_content">本アプリは外部へのリンクを含む場合があります。当社以外の第三者のウェブサイト（以下「リンク先サイト」という）の内容は、それぞれ各社の責任で管理されるものであり、リンク先サイトの利用条件や著作権など規定に従ってください。当社は、リンク先サイトにおける個人情報保護やサイトの内容に関して責任を負いかねます。したがって、当社ではリンク先の他ウェブサイトにアクセスした場合にはアプリ利用者が個人情報を提供される前に、当該ウェブサイトでの個人情報保護に関する方針やポリシー等をご一読いただくことをお勧めします。\n</string>
    <string name="policy_text_5">5. 禁止事項</string>
    <string name="policy_text_5_content">アプリ利用者は、本アプリの利用にあたり次に掲げる行為を行ってはならないものとします。\n5.1. 当社の承認した以外の方法により本アプリを利用する行為\n5.2 本アプリを個人的な利用範囲を超えて営業・営利目的等に利用する行為\n5.3 本アプリ（または本アプリに接続されているサーバおよびネットワーク）の運営を妨げる等の行為\n5.4 第三者になりすます行為\n5.5 当社また第三者の著作権、商標権、特許圏等の知的財産権、名誉権、プライバシー権、肖像権、その他の法令上または契約上の権利を侵害し、またはそのおそれのある行為\n5.6 法令、裁判所の判決、決定もしくは命令、公序良俗または本規約等に違反する行為\n5.7 その他、当社が不適切と判断した行為\n</string>
    <string name="policy_text_6">6. 当社の免責</string>
    <string name="policy_text_6_content">当社は、端末での動作（本アプリを端末から削除することにより、アプリ利用者が入力したデータの削除を含む）、端末への適合性、安定性（エラー等の発生、問題が発生した場合の修正、本アプリおよびサーバへのコンピューターウィルスその他の有害物の侵入など）について、保証するものではありません。本アプリの利用は、お客様の責任において行われるものとします。\n6.1 本アプリ上のコンテンツを利用すること、または利用できないことによって生じる損害\n6.2 車両運転中または歩行中に本アプリを操作し、もしくは画面注視などアプリ利用者の不注意により発生した事故の損害\n6.3 本アプリで公開されている情報の追加、変更、削除、公開中断、公開中止等によって生じる損害\n6.4 本アプリにリンクが設定されている他のウェブサイトから取得された各種情報の利用によって生じる障害\n6.5 本アプリご利用の際、ソフトウェア、ハードウェア上の事故、コンピューターウィルスによる汚染、データの減失など\n6.6 アプリ利用者同士またはアプリ利用者と他の第三者の間において生じたトラブル等\n6.7 本アプリの全部または一部の提供の中断、中止\n</string>
    <string name="policy_text_7">7. 権利義務の譲渡の禁止</string>
    <string name="policy_text_7_content">アプリ利用者は、本アプリに関するアプリ利用者としての地位ならびに当該地位に基づく権利および義務を当社があらかじめ承諾した場合を除き、第三者に譲渡または担保に供してはならないものとします。\n</string>
    <string name="policy_text_8">8. 利用停止、損害賠償</string>
    <string name="policy_text_8_content">アプリ利用者が本規約に定めるところに違反した場合、当社は直ちに当該アプリ利用者の本アプリ利用を停止できるものとします。また、本規約に反した行為、または不正もしくは違法な行為により当社または第三者に損害を生じさせた場合、当社は当該アプリ利用者に対して相応の損害賠償を請求できるものとします。\n</string>
    <string name="policy_text_9">9. 本アプリの内容などの変更</string>
    <string name="policy_text_9_content">当社は、事前の通知なく本アプリの内容を変更することができるものとします。\n</string>
    <string name="policy_text_10">10. 本アプリの終了</string>
    <string name="policy_text_10_content">当社は、本アプリの提供を継続することが困難と当社が判断した場合、当社が定める方法により本アプリの提供を終了することができるものとします。本アプリの提供が終了することにより、アプリ利用者が何らかの損害を被ったとしても、当社は一切の責任を追わないものとします。\n</string>
    <string name="policy_text_11">11. 規約の変更</string>
    <string name="policy_text_11_content">当社は、アプリ利用者の承諾およびアプリ利用者への通知なしに、いつでも本規約の変更を行うことができるものとします。\n</string>
    <string name="policy_text_12">12. 連絡方法</string>
    <string name="policy_text_12_content">本アプリに関するアプリ利用者から当社への連絡は、当社が運営するウェブサイト内の適宜の場所に設置するお問い合わせフォームの送信または当社が指定する方法により行っていただきます。\n</string>
    <string name="policy_text_13">13. 準拠法および裁判管轄</string>
    <string name="policy_text_13_content">本規約は日本法に準拠し、日本法に従って解釈されます。本アプリに起因または関連してアプリ利用者と当社との間に生じた紛争については東京地方裁判所または東京簡易裁判所を第一審の専属的合意管轄裁判所とします。\n</string>
    <string name="content_video_list_title1">Discovery ストリーミング配信</string>
    <string name="content_video_list_title2">VIDEO</string>
    <string name="finder_purpose_content_main">プロフェッショナルな組織人は、与えられた仕事であっても、そこに本質的な目的を見出し、お客様や自分にとって意味づけを見出すことができます。\n配属が決まり、自分の仕事の割当をもらった時から、「目的と意義」を見いだせるよう、自分への問いかけを定期的に続けていきましょう。 </string>
    <string name="finder_purpose_button_create">「目的と意義」ステートメントを\n作成する</string>
    <string name="finder_activity_text0">仕事の課題・テーマは？ </string>
    <string name="finder_activity_edittext0_content"> 仕事の課題やテーマ</string>
    <string name="finder_activity_text1">期待・ニーズ</string>
    <string name="finder_activity_text1_content">お客様、上司・先輩、他部署の利害関係者が私たちに期待していること、必要としていることは何でしょうか？ \n\n１）お客様：</string>
    <string name="finder_activity_edittext1_content">お客様の名前、社名</string>
    <string name="finder_activity_text12_content">お客様の期待・ニーズは何でしょうか？</string>
    <string name="finder_activity_edittext12_content">お客様の期待・ニーズ</string>
    <string name="finder_activity_text13_content">それらの期待・ニーズが満たされることで、お客様は何を実現したいのでしょうか？</string>
    <string name="finder_activity_edittext13_content">お客様は、なぜ、何のために</string>
    <string name="finder_activity_text14_content">２）上司・先輩：</string>
    <string name="finder_activity_edittext14_content">上司・先輩の名前</string>
    <string name="finder_activity_text15_content">上司・先輩の期待・ニーズは何でしょうか？</string>
    <string name="finder_activity_edittext15_content">お客様の期待・ニーズ</string>
    <string name="finder_activity_text16_content">それらの期待・ニーズが満たされることで、\n上司・先輩は何を実現したいのでしょうか？</string>
    <string name="finder_activity_edittext16_content">上司・先輩は、なぜ、何のために</string>
    <string name="finder_activity_text17_content">３）その他の利害関係者：</string>
    <string name="finder_activity_edittext17_content">その他の利害関係者の名前、組織名</string>
    <string name="finder_activity_text18_content">その他の利害関係者の期待・ニーズは何でしょうか？</string>
    <string name="finder_activity_edittext18_content">その他の利害関係者の期待・ニーズ</string>
    <string name="finder_activity_text19_content">それらの期待・ニーズが満たされることで、利害関係者は何を実現したいのでしょうか？</string>
    <string name="finder_activity_edittext19_content">利害関係者は、なぜ、何のために</string>
    <string name="finder_activity_text2">才能</string>
    <string name="finder_activity_text2_content">あなたの得意なことは何ですか？（複数可）</string>
    <string name="finder_activity_edittext2_content">""</string>
    <string name="finder_activity_text21_content">よく人に褒められることは何ですか？（複数可）</string>
    <string name="finder_activity_edittext21_content">""</string>
    <string name="finder_activity_text3">情熱</string>
    <string name="finder_activity_text3_content">あなたが心から好きなことは何ですか？\n（複数可）</string>
    <string name="finder_activity_edittext3_content">""</string>
    <string name="finder_activity_text31_content">必要な条件が整えられたとしたら、実際にやってみたいことは何ですか？（複数可）</string>
    <string name="finder_activity_edittext31_content">""</string>
    <string name="finder_activity_text4">良心</string>
    <string name="finder_activity_text4_content">今まで、さまざまな理由でやってこなかったことで、本当はすべきであると考えていることはありませんか？ それは何ですか？</string>
    <string name="finder_activity_edittext4_content">""</string>
    <string name="finder_activity_edittext41_content">""</string>
    <string name="finder_activity_edittext42_content">""</string>
    <string name="finder_activity_create_button">「目的と意義」ステートメントを\n作成する </string>
    <string name="finder_activity_cancel_button">すべてのフィールドをクリアする</string>
    <string name="title_btn_cancel">キャンセル</string>
    <string name="finder_result0">%1$s の目的と意義は…</string>
    <string name="finder_text1">目的</string>
    <string name="finder_part1">・ %1$s 様の 期待・ニーズは %2$s です。それは %3$s だからです。\n・ %4$s さんの 期待・ニーズは %5$s です。それは %6$s だからです。\n・ %7$s の 期待・ニーズは %8$s です。それは %9$s だからです。 </string>
    <string name="finder_text2">意義</string>
    <string name="finder_part2">・  私の能力が発揮される機会は %1$s や %2$s です。\n・  私が心から楽しめることは %3$s であり、私が情熱をもってすることができるのは %4$s です。\n・  私が、取り組みたいと大切に思っていることは%5$s と %6$s と %7$s です。</string>
    <string name="finder_text3">目的と意義を自分の言葉で\n編集・修正しますか？</string>
    <string name="finder_text4">「目的と意義」ステートメントを編集する</string>
    <string name="finder_text5">元に戻りますか？</string>
    <string name="finder_text6">質問に戻る</string>
    <string name="title_dialog_finder">戻りますか？</string>
    <string name="message_dialog_finder">質問フィールドの編集画面に戻ると、\nすべての編集内容が失われます。</string>
    <string name="no_result_search">結果なし</string>
    <string name="content_video_name01">Busy,Busy,Busy</string>
    <string name="content_video_name02">IDEO</string>
    <string name="content_video_name03">See-Do-Getサイクル</string>
    <string name="content_video_name04">ムハマド・ユヌス</string>
    <string name="content_video_name05">空回り</string>
    <string name="content_video_name06">貢献</string>
    <string name="description_video1">パラダイムの定義について書籍『７つの習慣』の著者であるコヴィー博士が説明しています。</string>
    <string name="description_video2">ユヌスがどのように自分の目的や意義を見出していったかを描いているドキュメンタリーです。</string>
    <string name="description_video3">マークは仕事に追われている日々で、やることなすことが空回り。何が問題なのかを考えながら見て欲しい映像です。</string>
    <string name="description_video4">仕事の依頼を受けたらゴールを明確にするなど、４つのポイントでチームワークを発揮している企業を事例として紹介しています。</string>
    <string name="text_card_1_3">プロはものの見方を変え、自身の行動と結果に変化をもたらします。また成果を出すまで自分の仕事に責任を持つ意識を持ち、困難な状況に直面しても、自律した行動を選択する力を持つことができます</string>
    <string name="text_card_1_4">プロは与えられた業務をこなすだけではなく、常に自分の仕事の「目的」を明確にします。また、自分の才能、情熱、良心を見出し、期待やニーズと重ね合わせることで、本当の「意義」を発見し、高いモチベーションを維持 します</string>
    <string name="text_card_1_5">プロは仕事の目的・意義を見出したら、確実にそれを成果（価値）に結びつける意識と行動を発揮します。これは個人に任せられた仕事だけではなく、チームの一員として働くときにも同様です</string>
    <string name="text_card_1_6">プロは自分自身でメンテナンスを決して怠りません。まずは基本条件である「任せて安心」と思われる個人の信頼性を高めると共に、自分の本質的な才能・エネルギーを磨くことで常に自分自身を成長させることにコミットしています</string>
    <string name="text_card_1_7">プロ意識</string>
    <string name="text_card_1_8">目的・意義：</string>
    <string name="text_card_1_10">ソリューション：</string>
    <string name="text_card_1_11">ポテンシャル：</string>
</resources>