<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_finder_create"
        android:orientation="vertical"
        android:padding="@dimen/margin_normalxxx">

        <TextView
            android:id="@+id/txtFinderResult0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/finder_result0"
            android:textColor="@color/bluex"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtFinder1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/finder_text1"
            android:textColor="@color/bluex"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/part1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/finder_part1"/>

        <TextView
            android:id="@+id/txtFinder2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/finder_text2"
            android:textColor="@color/bluex"
            android:textSize="16sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/part2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/finder_part2"/>

        <TextView
            android:id="@+id/txtFinder3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_largexxx"
            android:gravity="center"
            android:text="@string/finder_text3" />

        <Button
            android:id="@+id/btnEditFinder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_smallxxx"
            android:background="@drawable/border_button_findercreate"
            android:text="@string/finder_text4"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/txtFinder5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_smallxxx"
            android:gravity="center"
            android:text="@string/finder_text5" />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_smallxxx"
            android:background="@drawable/border_button_findercreate"
            android:text="@string/finder_text6"
            android:textColor="@color/white" />
    </LinearLayout>
</ScrollView>