<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:font="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingBottom="5dp">

    <ScrollView
        android:id="@+id/scroll_1_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border_card"
        android:orientation="vertical"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <com.discovertodo.phone.android.util.TextViewWithFont
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_card_1_7"
                font:name="MSGothic"
                font:textcolor="blue"
                font:textsize="nomarlxx" />

            <com.discovertodo.phone.android.util.TextViewWithFont
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/text_card_1_3"
                font:name="MSGothic"
                font:textcolor="black"
                font:textsize="nomarl" />

            <com.discovertodo.phone.android.util.TextViewWithFont
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_card_1_8"
                font:name="MSGothic"
                font:textcolor="blue"
                font:textsize="nomarlxx" />

            <com.discovertodo.phone.android.util.TextViewWithFont
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/text_card_1_4"
                font:name="MSGothic"
                font:textcolor="black"
                font:textsize="nomarl" />

            <com.discovertodo.phone.android.util.TextViewWithFont
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_card_1_10"
                font:name="MSGothic"
                font:textcolor="blue"
                font:textsize="nomarlxx" />

            <com.discovertodo.phone.android.util.TextViewWithFont
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/text_card_1_5"
                font:name="MSGothic"
                font:textcolor="black"
                font:textsize="nomarl" />

            <com.discovertodo.phone.android.util.TextViewWithFont
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_card_1_11"
                font:name="MSGothic"
                font:textcolor="blue"
                font:textsize="nomarlxx" />

            <com.discovertodo.phone.android.util.TextViewWithFont
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/text_card_1_6"
                font:name="MSGothic"
                font:textcolor="black"
                font:textsize="nomarl" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>