<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_finder_create">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_normalxxx">

        <TextView
            android:id="@+id/txtFinderResult0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/finder_result0"
            android:textColor="@color/bluex"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtFinder1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/finder_text1"
            android:textColor="@color/bluex"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/part1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="5dp"
            android:layout_marginTop="@dimen/margin_small"/>

        <TextView
            android:id="@+id/txtFinder2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/finder_text2"
            android:textColor="@color/bluex"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/part2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="5dp"
            android:layout_marginTop="@dimen/margin_small"/>

    </LinearLayout>
</ScrollView>